// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingCard render celebrate card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Celebrate One Another
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      See and celebrate one another's Steps of Faith.
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render celebrate card hidden 1`] = `""`;

exports[`OnboardingCard render challenges card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/challengeTarget.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Our Challenges
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      Create a community challenge everyone can join.
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render challenges card hidden 1`] = `""`;

exports[`OnboardingCard render contacts card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/MemberContacts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Journey Together
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      Stay engaged with contacts in your community.
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render contacts card hidden 1`] = `""`;

exports[`OnboardingCard render impact card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/globe.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      See God at Work
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      See what God is doing as you take Steps of Faith together. 
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render impact card hidden 1`] = `""`;

exports[`OnboardingCard render members card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/ourJourney.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Journey Together
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      Take a Step of Faith with someone in your community.
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render members card hidden 1`] = `""`;

exports[`OnboardingCard render steps card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/footprints.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Steps of Faith
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      Choose a person in People view to add a new step
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render steps card hidden 1`] = `""`;

exports[`OnboardingCard render surveys card 1`] = `
<Card
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 0,
      "marginBottom": 5,
      "marginHorizontal": 0,
      "marginVertical": 0,
      "position": "relative",
      "shadowColor": "#B4B6BA",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "padding": 25,
        "paddingTop": 35,
      }
    }
    value={1}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/curiousIcon.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <MyText
      style={
        Object {
          "color": "#007398",
          "fontSize": 24,
          "fontWeight": "300",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      Grow Together
    </MyText>
    <MyText
      style={
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 50,
          "paddingVertical": 5,
          "textAlign": "center",
        }
      }
    >
      Learn about one another through survey responses.
    </MyText>
  </Flex>
  <Flex
    style={
      Object {
        "position": "absolute",
        "right": 10,
        "top": 10,
      }
    }
  >
    <IconButton
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      name="deleteIcon"
      onPress={[Function]}
      style={
        Object {
          "color": "#B4B6BA",
          "fontSize": 12,
        }
      }
      type="MissionHub"
    />
  </Flex>
</Card>
`;

exports[`OnboardingCard render surveys card hidden 1`] = `""`;
